Fix margin spacing for checkpoints in CSS

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header p {
   margin: 0 1em 0 1em;
 }
 .checkpoints div {
-  margin: 1.2em 0 1.34em -0.4em;
+  margin: 1.2em 0 1.53em -0.4em;
   width: 15px;
   height: 15px;
   background-color: black;
